--- a/mysite/blog/templates/blog/post_detail.html
+++ b/mysite/blog/templates/blog/post_detail.html
@@ -1,4 +1,4 @@
-{% extends 'blog/base.html' %}
+{% load static %}
 {% load static %}
 <html>
     <head>
@@ -13,17 +13,16 @@
     <h1><a href="/">Django Girls Blog</a></h1>
 </div>
 
-
 {% block content %}
-    {% for post in posts %}
-        <div class="post">
+    <div class="post">
+        {% if post.published_date %}
             <div class="date">
-             
+                {{ post.published_date }}
             </div>
-          <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
-            <p>{{ post.text|linebreaksbr }}</p>
-        </div>
-    {% endfor %}
+        {% endif %}
+        <h2>{{ post.title }}</h2>
+        <p>{{ post.text|linebreaksbr }}</p>
+    </div>
 {% endblock %}
-    </body>
+</body>
 </html>
